--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.84.0",
+    "@tailwindcss/vite": "^4.1.17",
+    "date-fns": "^4.1.0",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
